--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,15 @@
 html {
   font: 14px -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   margin: 0;
+  padding: 0;
 }
 
 body {
   background-color: white;
+  box-sizing: border-box;
+  margin: 0;
   padding: 0.33em;
+  text-align: center;
 }
 
 .p-button.p-button-sm {
@@ -24,4 +28,8 @@ body {
   .p-button-icon {
     font-size: 0.75rem;
   }
+}
+
+.tze-dont-wrap-label .p-button-label {
+  white-space: nowrap;
 }
